Trabajando con numeros en JS

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>iJCode - JS</title>
     </head>
     <body>
-        <script src="./Strings/strings.js"></script>
+        <!-- <script src="./js/strings.js"></script> -->
+        <script src="./js/numeros.js"></script>
     </body>
 </html>
