--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <!-- <script src="./js/strings.js"></script> -->
-        <script src="./js/numeros.js"></script>
+        <!-- <script src="./js/numeros.js"></script> -->
+        <script src="./js/funciones.js"></script>
     </body>
 </html>
