--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <!-- <script src="./js/strings.js"></script> -->
         <!-- <script src="./js/numeros.js"></script> -->
-        <script src="./js/funciones.js"></script>
+        <!-- <script src="./js/funciones.js"></script> -->
+        <script src="./js/objetos.js"></script>
     </body>
 </html>
