Condiciones en JS

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <!-- <script src="./js/numeros.js"></script> -->
         <!-- <script src="./js/funciones.js"></script> -->
         <!-- <script src="./js/objetos.js"></script> -->
-        <script src="./js/comparaciones.js"></script>
+        <!-- <script src="./js/comparaciones.js"></script> -->
+        <script src="./js/condicionales.js"></script>
     </body>
 </html>
