Funciones con retorno en JS

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <!-- <script src="./js/funciones.js"></script> -->
         <!-- <script src="./js/objetos.js"></script> -->
         <!-- <script src="./js/comparaciones.js"></script> -->
-        <script src="./js/condicionales.js"></script>
+        <!-- <script src="./js/condicionales.js"></script> -->
+        <script src="./js/funciones_retorno.js"></script>
     </body>
 </html>
