Arrow Functions en JS

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <!-- <script src="./js/objetos.js"></script> -->
         <!-- <script src="./js/comparaciones.js"></script> -->
         <!-- <script src="./js/condicionales.js"></script> -->
-        <script src="./js/funciones_retorno.js"></script>
+        <!-- <script src="./js/funciones_retorno.js"></script> -->
+        <script src="./js/arrow_functions.js"></script>
     </body>
 </html>
