Ciclo For en Js

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <!-- <script src="./js/comparaciones.js"></script> -->
         <!-- <script src="./js/condicionales.js"></script> -->
         <!-- <script src="./js/funciones_retorno.js"></script> -->
-        <script src="./js/arrow_functions.js"></script>
+        <!-- <script src="./js/arrow_functions.js"></script> -->
+        <script src="./js/for.js"></script>
     </body>
 </html>
