While en JavaScript

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <!-- <script src="./js/condicionales.js"></script> -->
         <!-- <script src="./js/funciones_retorno.js"></script> -->
         <!-- <script src="./js/arrow_functions.js"></script> -->
-        <script src="./js/for.js"></script>
+        <!-- <script src="./js/for.js"></script> -->
+        <script src="./js/while.js"></script>
     </body>
 </html>
