Do-While en JavaScript

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <!-- <script src="./js/funciones_retorno.js"></script> -->
         <!-- <script src="./js/arrow_functions.js"></script> -->
         <!-- <script src="./js/for.js"></script> -->
-        <script src="./js/while.js"></script>
+        <!-- <script src="./js/while.js"></script> -->
+        <script src="./js/do-while.js"></script>
     </body>
 </html>
