Condicional Multiple Switch en JavaScript

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <!-- <script src="./js/arrow_functions.js"></script> -->
         <!-- <script src="./js/for.js"></script> -->
         <!-- <script src="./js/while.js"></script> -->
-        <script src="./js/do-while.js"></script>
+        <!-- <script src="./js/do-while.js"></script> -->
+        <script src="./js/switch.js"></script>
     </body>
 </html>
