Arrays en JavaScript

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <!-- <script src="./js/for.js"></script> -->
         <!-- <script src="./js/while.js"></script> -->
         <!-- <script src="./js/do-while.js"></script> -->
-        <script src="./js/switch.js"></script>
+        <!-- <script src="./js/switch.js"></script> -->
+        <script src="./js/array.js"></script>
     </body>
 </html>
