--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <!-- <script src="./js/while.js"></script> -->
         <!-- <script src="./js/do-while.js"></script> -->
         <!-- <script src="./js/switch.js"></script> -->
-        <script src="./js/array.js"></script>
+        <!-- <script src="./js/array.js"></script> -->
+        <script src="./js/array.filter.js"></script>
     </body>
 </html>
