array.map en JavaScript

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <!-- <script src="./js/do-while.js"></script> -->
         <!-- <script src="./js/switch.js"></script> -->
         <!-- <script src="./js/array.js"></script> -->
-        <script src="./js/array.filter.js"></script>
+        <!-- <script src="./js/array.filter.js"></script> -->
+        <script src="./js/array.map.js"></script>
     </body>
 </html>
