--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <!-- <script src="./js/switch.js"></script> -->
         <!-- <script src="./js/array.js"></script> -->
         <!-- <script src="./js/array.filter.js"></script> -->
-        <script src="./js/array.map.js"></script>
+        <!-- <script src="./js/array.map.js"></script> -->
+        <script src="./js/array.reduce.js"></script>
     </body>
 </html>
